--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://saikiranmopenpixel.github.io/zcode-fullstack",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
